Double spacing and fixed spacing in between sentences

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -24,6 +24,12 @@ textarea {
     width: 750px;
 }
 
+/* Essay output styling */
+.double-spaced {
+    line-height: 250%;
+}
+
+/* Proof of concept of highlighted text */
 .highlight-text {
     color: #f8f8ed;
 }
@@ -34,50 +40,51 @@ textarea {
 
 /* Carousel */
 .carousel {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .carousel .container {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .carousel-control {
-  background-color: transparent;
-  border: 0;
-  font-size: 40px;
-  margin-top: 15px;
-  margin-right: 80px;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
+    background-color: transparent;
+    border: 0;
+    font-size: 40px;
+    margin-top: 15px;
+    margin-right: 80px;
+    text-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
 
 .carousel .item {
-  height: 250px;
-  background-image: url('../img/debut_dark.png');
-  background-repeat: repeat;
+    height: 250px;
+    background-image: url('../img/debut_dark.png');
+    background-repeat: repeat;
 }
 
 .carousel-caption {
-  background-color: transparent;
-  position: static;
-  max-width: 800px;
-  padding: 0 20px;
-  margin-bottom: 40px;
+    background-color: transparent;
+    position: static;
+    max-width: 800px;
+    padding: 0 20px;
+    margin-bottom: 40px;
 }
 .carousel-caption h2,
 .carousel-caption .lead {
-  margin: 0;
-  line-height: 1.25;
-  color: #fff;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
+    margin: 0;
+    line-height: 1.25;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
 
 .carousel-caption .btn {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
+/* TODO */
 /* RESPONSIVE CSS */
 @media (max-width: 979px) {
   .carousel .item {
@@ -95,23 +102,29 @@ textarea {
     margin-left: -20px;
     margin-right: -20px;
   }
+
   .carousel .container {
 
   }
+
   .carousel .item {
     height: 250px;
   }
+
   .carousel img {
     height: 250px;
   }
+
   .carousel-caption {
     width: 65%;
     padding: 0 70px;
     margin-bottom: 40px;
   }
+
   .carousel-caption h1 {
     font-size: 30px;
   }
+
   .carousel-caption .lead,
   .carousel-caption .btn {
     font-size: 18px;
